--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      src="https://kit.fontawesome.com/9026ded43e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Dictionary App</title>
   </head>
   <body>
